src/test/deca/context/invalid/provided/testi28.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : Expecting a class
{   
    int x;
    float.x = x;
}